--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body, html {
     width: 100%;
     height: 100%;
-    background-color: #ffffff; }
+    background-color: #ffffff; 
+    font-family: 'Roboto', sans-serif;}
   
   .container {
     height: 100%;
@@ -19,7 +20,7 @@ body, html {
             align-items: center; }
   
   .machine {
-    width: 60vmin;
+    width: 100%;
     fill: #4dac1e; }
   
   .small-shadow, .medium-shadow, .large-shadow {
