--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body, html {
     font-family: 'Roboto', sans-serif;}
   
   .container {
-    height: 100%;
+    height: 40vh;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
